Org card background: Fix text contrast for light mode (#4093)

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -26,6 +26,17 @@
   &.card--hover:active {
     transform: translateY(-1px);
   }
+
+  &.card--background-image {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.75) 0%, rgba(255, 255, 255, 0.95) 90%), var(--bg-image);
+
+    html[data-dark='true'] & {
+      background-image: linear-gradient(rgba(37, 36, 41, 0.5) 0%, rgba(37, 36, 41, 0.85) 75%), var(--bg-image);
+    }
+  }
 }
 
 .draggable-mirror {
